test_suite5/ALAN/test_suite/alan-2022-examples/failing/007330_mutation.alan
source u begin put "j" not . "=" end
